// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataWranglingResult: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Wrangling Result"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "jobs": Array [
            Object {
              "id": 1,
              "jobState": "failed",
            },
            Object {
              "id": 2,
              "jobState": "success",
            },
          ],
          "metaData": Object {},
        }
      }
      fetchPreview={[Function]}
      fetchResult={[MockFunction]}
      hideOnDesktop={false}
      history={
        Object {
          "push": [Function],
        }
      }
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "4",
          },
        }
      }
      previewData={
        Object {
          "data": Array [
            Object {
              "Birthday": "02/22/1732",
              "Birthplace": "Westmoreland County",
              "First Name": "George",
              "Full Name": "George Washington",
              "Last Name": "Washington",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "10/30/1735",
              "Birthplace": "Braintree",
              "First Name": "John",
              "Full Name": "John Adams",
              "Last Name": "Adams",
              "State of Birth": "MA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/13/1743",
              "Birthplace": "Shadwell",
              "First Name": "Thomas",
              "Full Name": "Thomas Jefferson",
              "Last Name": "Jefferson",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "03/16/1751",
              "Birthplace": "Port Conway",
              "First Name": "James",
              "Full Name": "James Madison",
              "Last Name": "Madison",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/28/1758",
              "Birthplace": "Monroe Hall",
              "First Name": "James",
              "Full Name": "James Monroe",
              "Last Name": "Monroe",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
          ],
          "fields": Object {
            "Birthday": Object {},
            "Birthplace": Object {},
            "First Name": Object {},
            "Full Name": Object {},
            "Last Name": Object {},
            "State of Birth": Object {},
            "Url": Object {},
          },
        }
      }
    />
  </ContextHeader>
  <DataPreview
    dataSource={
      Object {
        "jobs": Array [
          Object {
            "id": 1,
            "jobState": "failed",
          },
          Object {
            "id": 2,
            "jobState": "success",
          },
        ],
        "metaData": Object {},
      }
    }
    fetchPreview={[Function]}
    fetchResult={[MockFunction]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    jobId={null}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
  />
  <DataSourceNavigation
    dataSource={
      Object {
        "jobs": Array [
          Object {
            "id": 1,
            "jobState": "failed",
          },
          Object {
            "id": 2,
            "jobState": "success",
          },
        ],
        "metaData": Object {},
      }
    }
    fetchPreview={[Function]}
    fetchResult={[MockFunction]}
    hideOnDesktop={true}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
  />
</Fragment>
`;

exports[`DataWranglingResult: Component should render correctly with loading 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Wrangling Result"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "jobs": Array [
            Object {
              "id": 1,
              "jobState": "failed",
            },
            Object {
              "id": 2,
              "jobState": "success",
            },
          ],
          "metaData": Object {},
        }
      }
      fetchPreview={[Function]}
      hideOnDesktop={false}
      history={
        Object {
          "push": [Function],
        }
      }
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "4",
          },
        }
      }
      previewData={
        Object {
          "data": Array [
            Object {
              "Birthday": "02/22/1732",
              "Birthplace": "Westmoreland County",
              "First Name": "George",
              "Full Name": "George Washington",
              "Last Name": "Washington",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "10/30/1735",
              "Birthplace": "Braintree",
              "First Name": "John",
              "Full Name": "John Adams",
              "Last Name": "Adams",
              "State of Birth": "MA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/13/1743",
              "Birthplace": "Shadwell",
              "First Name": "Thomas",
              "Full Name": "Thomas Jefferson",
              "Last Name": "Jefferson",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "03/16/1751",
              "Birthplace": "Port Conway",
              "First Name": "James",
              "Full Name": "James Madison",
              "Last Name": "Madison",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/28/1758",
              "Birthplace": "Monroe Hall",
              "First Name": "James",
              "Full Name": "James Monroe",
              "Last Name": "Monroe",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
          ],
          "fields": Object {
            "Birthday": Object {},
            "Birthplace": Object {},
            "First Name": Object {},
            "Full Name": Object {},
            "Last Name": Object {},
            "State of Birth": Object {},
            "Url": Object {},
          },
        }
      }
    />
  </ContextHeader>
  <DataPreview
    dataSource={
      Object {
        "jobs": Array [
          Object {
            "id": 1,
            "jobState": "failed",
          },
          Object {
            "id": 2,
            "jobState": "success",
          },
        ],
        "metaData": Object {},
      }
    }
    fetchPreview={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    jobId={null}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
  />
  <DataSourceNavigation
    dataSource={
      Object {
        "jobs": Array [
          Object {
            "id": 1,
            "jobState": "failed",
          },
          Object {
            "id": 2,
            "jobState": "success",
          },
        ],
        "metaData": Object {},
      }
    }
    fetchPreview={[Function]}
    hideOnDesktop={true}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
  />
</Fragment>
`;
